syntax = "proto3";

package tags.v1;

import "google/api/annotations.proto";

option go_package = "tags.v1";

service Tags {
  rpc GenerateTags(GenerateTagsRequest) returns (GenerateTagsResponse) {
    option (google.api.http) = {
      post: "/v1/tags/generate"
      body: "*"
    };
  }
}

message GenerateTagsRequest {
  string content = 1;
}

message GenerateTagsResponse {
  repeated string tags = 1;
}
